# Petra-M--DS

./: INSTALL.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
_build_system/: backend.py  build_config.py  build_global.py  build_globals.py  build_mumps.py  build_mumps_solve.py  build_utils.py
mumps_solve/: CMakeLists.txt  mumps_solve.cpp
petram/ext/mumps/: mumps_solve.i  mumps_solve_wrap.cxx
python/petram/ext/mumps/: mumps_solve.i  mumps_solve.py
